config-root/namespaces/jx-staging/go-lang-test1/go-lang-test1-go-lang-test1-deploy.yaml
# Source: go-lang-test1/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-lang-test1-go-lang-test1
  labels:
    draft: draft-app
    chart: "go-lang-test1-0.0.3"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'go-lang-test1'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: go-lang-test1-go-lang-test1
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: go-lang-test1-go-lang-test1
    spec:
      serviceAccountName: go-lang-test1-go-lang-test1
      containers:
        - name: go-lang-test1
          image: "ghcr.io/mashaya/go-lang-test1:0.0.3"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
